--- a/BulkyBookWeb/Areas/Admin/Views/Company/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Company/Index.cshtml
@@ -2,12 +2,12 @@
     <div class="row pd-4">
         <div class="col-6">
             <h2 class="text-primary">
-                Product List
+                Company List
             </h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp; Create New Product
+            <a asp-controller="Company" asp-action="Upsert" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> &nbsp; Create New Company
             </a>
         </div>
     </div>
@@ -16,11 +16,11 @@
     <table id="tblData" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>ISBN</th>
-                <th>Price</th>
-                <th>Author</th>
-                <th>Category</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Phone Number</th>
                 <th></th>
             </tr>
         </thead>
@@ -28,5 +28,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/product.js"></script>
+    <script src="~/js/company.js"></script>
 }
