--- a/BulkyBookWeb/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/CoverType/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="row pd-4">
         <div class="col-6">
             <h2 class="text-primary">
-                Category List
+                CoverType List
             </h2>
         </div>
         <div class="col-6 text-end">
