--- a/BulkyBookWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/BulkyBookWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,34 +1,77 @@
-﻿@model IEnumerable<BulkyBook.Models.Product>
+﻿@model BulkyBook.Models.ViewModels.ShoppingCartVM
+<form method="post">
+    <br />
+    <div class="container">
+        <div class="card">
+            <div class="card-header bg-dark text-light ml-0">
+                <div class="row">
+                    <div class="col-6  pt-2">
+                        <i class="fa fa-shopping-cart"></i> &nbsp;
+                        Shopping Cart
+                    </div>
+                    <div class="col-6 text-end">
+                        <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-info btn-sm">Continue Shopping</a>
+                    </div>
+                </div>
+            </div>
 
-<div class="row pb-3">
-    @foreach (var product in Model)
-    {
-        <div class="col-lg-3 col-md-6">
-            <div class="row p-2">
-                <div class="col-12 p-1" style="border:1px solid #008cba; border-radius: 5px;">
-                    <div class="card">
-                        <img src="@product.ImageUrl" class="card-img-top rounded" height="420px" />
-                        <div class="card-body">
-                            <div class="pl-1">
-                                <p class="card-title h6 text-primary">@product.Title</p>
-                                <p class="card-title text-info">by <b>@product.Author</b></p>
+            <div class="card-body">
+                @foreach (var item in Model.ListCart)
+                {
+                    <div class="row">
+                        <div class="d-none d-lg-block col-lg-1 text-center py-2">
+                            <img src="@item.Product.ImageUrl" class="rounded" width="100%" />
+                        </div>
+                        <div class="col-12 col-lg-6 pt-md-3">
+                            <h5><strong>@item.Product.Title</strong></h5>
+                            <p><small>@Html.Raw(item.Product.Description)</small></p>
+                        </div>
+                        <div class="col-12  col-lg-5 text-center row">
+                            <div class="col-4 text-md-right pt-4">
+                                <h6><strong>@item.Price.ToString("c")
+                                        <span class="text-muted">&nbsp;x&nbsp;</span>@item.Count </strong></h6>
                             </div>
-                            <div class="pl-1">
-                                <p>List Price: <strike><b>$@product.ListPrice.ToString("0.00")</b></strike></p>
+                            <div class="col-6 col-sm-4 col-lg-6 pt-2">
+                                <div class="w-75 btn-group" role="group">
+                                    <a asp-action="plus" asp-route-cartId="@item.Id" class="btn btn-primary">
+                                        <i class="bi bi-plus-square"></i>
+                                    </a> &nbsp;
+                                    <a asp-action="minus" asp-route-cartId="@item.Id" class="btn btn-warning">
+                                        <i class="bi bi-dash-square"></i>
+                                    </a>
+                                </div>
+
                             </div>
-                            <div class="pl-1">
-                                <p>As low as: <b>$@product.Price100.ToString("0.00")</b></p>
+                            <div class="col-2 col-sm-4 col-lg-2 text-right pt-2">
+                                <a asp-action="remove" asp-route-cartId="@item.Id" class="btn btn-danger">
+                                    <i class="bi bi-trash-fill"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <a asp-action="Details" class="btn btn-primary form-control" asp-route-productId="@product.Id">
-                            Details
-                        </a>
+                    <hr />
+                }
+                <div class="row">
+                    <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 pr-4">
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex justify-content-between bg-light">
+                                <span class="text-info"> Total (USD)</span>
+                                <strong class="text-info">@Model.CartTotal.ToString("c")</strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="card-footer">
+                <div class="card-footer row">
+                    <div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6 ">
+                        <a asp-action="Summary" class="btn btn-success form-control">Summary</a>
                     </div>
                 </div>
             </div>
         </div>
-    }
-</div>
+    </div>
+</form>
 
